--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,7 +8,7 @@
 <body class="container">
 
 <header>
-    <%- include ('../partials/header') -%>
+    <%- include ../partials/header %>
 </header>
 
 <main>
@@ -19,7 +19,7 @@
 </main>
 
 <footer>
-    <%- include ('../partials/footer') -%>
+    <%- include ../partials/footer %>
 </footer>
 
 </body>
